# rebdhuhn

./: .gitignore  .pre-commit-config.yaml  README.md  create_env_file.py  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.claude/: settings.local.json
.github/workflows/: coverage.yml  formatting.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  unittests.yml
dev_requirements/: requirements-linting.txt  requirements-packaging.txt  requirements-tests.txt  requirements-type_check.txt
docs/plans/: 2025-12-13-multi-step-instructions-design.md
src/ebd_table_to_graph/: __init__.py
src/ebd_table_to_graph/models/: ebd_graph.py  ebd_table.py
src/ebdtable2graph/: __init__.py  add_watermark.py  add_watermark_ported.py  graph_conversion.py  graph_utils.py  graphviz.py  kroki.py  plantuml.py
src/ebdtable2graph/models/: ebd_graph.py  ebd_table.py
src/ebdtable2graph/models/errors/: __init__.py
src/rebdhuhn/: __init__.py  add_watermark.py  graph_conversion.py  graph_utils.py  graphviz.py  kroki.py  plantuml.py  utils.py
src/rebdhuhn/models/: __init__.py  ebd_graph.py  ebd_table.py
src/rebdhuhn/models/errors/: __init__.py
unittests/: conftest.py  e0266.py  e0267.py  e0401.py  e0404.py  e0454.py  e0459.py  e0459a.py  e0462.py  e0487.py  e0529.py  examples.py  table_with_transition_node.py  test_add_watermark.py  test_e0055.py  test_e0256_ambiguous_outcome.py  test_e0259_transitional_outcome.py  test_e0622_cross_references.py  test_ebd_table_models.py  test_errors.py  test_malo_ident.py  test_multi_step_instructions.py  test_table_to_graph.py  test_transitional_outcome.py  test_utils.py
unittests/__snapshots__/: test_e0055.ambr  test_e0622_cross_references.ambr  test_malo_ident.ambr  test_table_to_graph.ambr  test_transitional_outcome.ambr
unittests/output/: E_0003.dot  E_0015.dot  E_0025.dot  E_0401.dot
unittests/test_files/: e0055.json  e0256_ambiguous_outcome.json  e0452_empty_remark.json  fv2504_ebd40b_e0594.json  fv2504_ebd40b_e0610.json
