# The content of this file is only necessary for python packages
[metadata]
name = rebdhuhn
author = Hochfrequenz Unternehmensberatung GmbH
author_email = info@hochfrequenz.de
description = Converts (already scraped) Entscheidungsbaumdiagramm tables to real graphs
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Hochfrequenz/rebdhuhn
project_urls =
    Documentation = https://github.com/Hochfrequenz/rebdhuhn
    Code = https://github.com/Hochfrequenz/rebdhuhn
    Bug tracker = https://github.com/Hochfrequenz/rebdhuhn/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
license = mit
platforms = any

[options]
# create a src package in the root directory and create there a folder with the name of your package
# into this folder you put your python files
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.11
install_requires =
    attrs
    networkx
    requests
    cattrs
    lxml>=4.9.3
    svgutils
    # write here line by line the dependencies for your package (from requirements.in)

[options.packages.find]
where = src
exclude =
    unittests

[options.package_data]
* =
    py.typed
    hochfrequenz-logo.svg
